Added some pizzaz to documentation

--- a/release/fv/fv_tagizi_dene/source/welcome/welcome.htm
+++ b/release/fv/fv_tagizi_dene/source/welcome/welcome.htm
@@ -13,7 +13,13 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black
+}
  --> </style>
+
 
 </head>
 
@@ -27,29 +33,29 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
   <li>The special characters used to write Tāgizi Dene are typed using a combination of punctuation followed by a vowel.</li>
     <li>Single Accents
         <ul>
-            <li>To type the diaeresis accent use the Semicolon key ; — ÿ is typed ; then y.</li>
-            <li>To type the grave accent use the Backquote key ` — à is typed ` then a.</li>
-            <li>To type the caron accent use the Percent sign % — ǎ is typed % then a.</li>
-            <li>To type the circumflex accent use the Caret sign ^ — â is typed ^ then a.</li>
-            <li>To type the macron accent use the Equal sign = — ā is typed = then a.</li>
-            <li>To type the ogonek accent use the Comma , — ą is typed , then a.</li>
+            <li>To type the diaeresis accent use the Semicolon key <kbd>;</kbd> — ÿ is typed <kbd>;</kbd> then <kbd>y</kbd></li>
+            <li>To type the grave accent use the Backquote key <kbd>`</kbd> — à is typed <kbd>`</kbd> then <kbd>a</kbd></li>
+            <li>To type the caron accent use the Percent sign <kbd>%</kbd> — ǎ is typed <kbd>%</kbd> then <kbd>a</kbd></li>
+            <li>To type the circumflex accent use the Caret sign <kbd>^</kbd> — â is typed <kbd>^</kbd> then <kbd>a</kbd></li>
+            <li>To type the macron accent use the Equal sign <kbd>=</kbd> — ā is typed <kbd>=</kbd> then <kbd>a</kbd></li>
+            <li>To type the ogonek accent use the Comma key <kbd>,</kbd> — ą is typed <kbd>,</kbd> then <kbd>a</kbd></li>
         </ul>
     </li>
     <li>Double Accents
       <br>Double accents are typed by using both corresponding punctuation marks of the accents you wish to combine followed by a vowel.</br>
         <ul>
-            <li>To type the macron and grave accents use the Equal sign and Backquote key — ā̀ is typed =` or `= then a.</li>
-            <li>To type the circumflex and ogonek accents use the Caret sign and Comma key — ą̂ is typed ,^ or ^, then a.</li>
+            <li>To type the macron and grave accents use the Equal sign and Backquote key — ā̀ is typed <kbd>=</kbd><kbd>`</kbd> or <kbd>`</kbd><kbd>=</kbd> then <kbd>a</kbd></li>
+            <li>To type the circumflex and ogonek accents use the Caret sign and Comma key — ą̂ is typed <kbd>,</kbd><kbd>^</kbd> or <kbd>^</kbd><kbd>,</kbd> then <kbd>a</kbd></li>
         </ul>
     </li>
     <li>Triple Acccents
       <br>Triple accents are typed by using the three correspinding punctuation marks of the accents you wish to combine followed by a vowel.</br>
         <ul>
-            <li>To type the grave, macron, and ogonek accents use the Comma key, Backquote key, and Comma in any order — ą̄̀ is typed ,`= then a.</li>
+            <li>To type the grave, macron, and ogonek accents use the Comma key, Backquote key, and Equal key in any order — ą̄̀ is typed <kbd>,</kbd><kbd>`</kbd><kbd>=</kbd> then <kbd>a</kbd></li>
         </ul>
     </li>
     <li>The Quote key ' has been modified to type the curled apostrophe ʼ. 
-      <br>To type the regular Quote ', type Right-Alt+Quote (Windows) or Option+Quote (Mac)</br>
+      <br>To type the regular Quote ', type Right <kbd>Alt</kbd>+<kbd>'</kbd> (Windows) or <kbd>Option</kbd>+<kbd>'</kbd> (Mac)</br>
     </li>
 </ul>
 <h2>Unicode Fonts</h2>
