--- a/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
+++ b/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
@@ -1,31 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-<title>Dene Dzage</title>
-
-<style type="text/css"> <!--
-li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
-p {font-family: "Aboriginal Sans"; }
-h2 {font-family: "Aboriginal Sans"; }
-.legalese { font-size: x-small; }
-h3 {font-family: "Aboriginal Sans";}
-a:link {color: #0000ee; text-decoration:none;}
-a:visited {	color: rgb(0,150,0); text-decoration:none;} 
-a:active {	color: rgb(102,117,184); text-decoration:none;}
- --> </style>
-
-
-</head>
-<body>
-    <table width="100%" border="0" cellpadding="0">
-      <tr>
-        <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-</p>
-<h1>Keyboard Layout</h1>
-<p>
-</p>
-<p>The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
+<p>The Danezāgéʼ keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
 <p>
 </p>
 <p>Typing a single punctuation mark followed by a vowel (without a space in between) will type the vowel with a high, rising, or falling tone, the nasal hook, or a long vowel.
@@ -85,13 +58,3 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <li>The Straight Quote <b>'</b> is typed <b>Right-Alt</b> (Windows) or <b>Option</b> (Mac) + <b>Quote Key</b></li>
   </ul>
 <p></p>
-
-<tr>
-  <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
-</tr>
-<tr>
-  <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
-</tr>
-
-</body>
-</html>
