--- a/release/fv/fv_dene_dzage/source/readme.htm
+++ b/release/fv/fv_dene_dzage/source/readme.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="utf-8">
-  <title>Dene Dzage Keyboard</title>
+  <title>Danezāgéʼ Keyboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
-<h1>Dene Dzage Keyboard</h1>
+<h1>Danezāgéʼ Keyboard</h1>
 
-<p>This keyboard is designed for the Dene Dzage language of the Western Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the Danezāgéʼ language of the Western Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
 </body>
 </html>
