--- a/release/fv/fv_dene_dzage/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_dzage/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Dene Dzage</title>
+<title>Danezāgéʼ</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -24,7 +24,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 <h2>Desktop Layout</h2>
 <p>
 </p>
-<p> The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
+<p> The Danezāgéʼ keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
 <p></p>
 <p>Typing a single punctuation mark followed by a vowel (without a space in between) will type the vowel with a high, rising, or falling tone, the nasal hook, or a long vowel.</p>
   <ul>
