--- a/release/fv/fv_dakelh/source/welcome/welcome.htm
+++ b/release/fv/fv_dakelh/source/welcome/welcome.htm
@@ -31,7 +31,11 @@ kbd {
 					<ul>
 						<li>The underlined letters s̲, z̲, t̲s̲, and d̲z̲ each have their own key. To type the underline accent separately, use the Backquote key <kbd>`</kbd> (left of the 1 key).</li>
 						<li>To type the acute accent use the Slash key <kbd>/</kbd> — á is typed <kbd>a</kbd>+<kbd>/</kbd></li>
-						<li>You can type the original English punctuation by holding down the <kbd>Right-Alt</kbd> or <kbd>⌥ Option</kbd> key. The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Windows) <kbd>⌥ Option</kbd>+<kbd>;</kbd> (Mac).</li>
+						<li>You can type the original English punctuation by holding down the <kbd>Right-Alt</kbd> or <kbd>⌥ Option</kbd> key. The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Windows) <kbd>⌥ Option</kbd>+<kbd>;</kbd> (Mac).
+              <ul>
+                <li>NOTE: When using Google Docs, Slash / is typed <kbd>Right-Alt</kbd>+<kbd>SHIFT</kbd>+<kbd>/</kbd> (Windows) or <kbd>⌥ Option</kbd>+<kbd>SHIFT</kbd>+<kbd>/</kbd> (Mac)</li>
+              </ul>
+            </li>
 						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
 						<ul>
 									<li>single: ‘ <kbd>SHIFT</kbd>+<kbd>`</kbd> — ’ Apostrophe</li>
