--- a/release/t/teochew/source/readme.htm
+++ b/release/t/teochew/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>teochew</h1>
 
 <p>
-    teochew 1.0 generated from template.
+    teochew for Teochow language, Tiê-chiu Pe̍h-ūe-jī.
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 
