added missing images, tweaked mobile layout, updated documentation

--- a/release/fv/fv_tagizi_dene/source/fv_tagizi_dene-help.htm
+++ b/release/fv/fv_tagizi_dene/source/fv_tagizi_dene-help.htm
@@ -24,6 +24,6 @@
           </ul>
       </li>
       <li>The Quote key ' has been modified to type the curled apostrophe ʼ. 
-        <br>To type the regular Quote ', type Right >Alt<>+>'<> (Windows) or >Option<>+>'<> (Mac)</br>
+        <br>To type the regular Quote ', type Right-Alt+' (Windows) or Option+' (Mac)</br>
       </li>
   </ul>
