--- a/release/fv/fv_dane_zaa_zaage/source/welcome.htm
+++ b/release/fv/fv_dane_zaa_zaage/source/welcome.htm
@@ -28,28 +28,11 @@
 </ul>
 
 <p>By holding the ALT key, you can return to the standard US English keyboard value of any modified key (such as <strong>p, r, q, v, x</strong>, and various punctuation). Shift-Alt will give you the standard English shifted value of the modified key (such as <strong>P, R, Q, V, Z</strong>, etc).</p>
+<p>NOTE: When using Google Docs, / is typed Right-Alt+Shift+/ (Windows) or ⌥ Option+Shift_/.</p>
 
 <h2>Unicode Fonts</h2>
 	<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
   <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
-
-<h2>Mobile/Tablet Touch Layout</h2>
-<img src="fv_dane_zaa_zaage_T.png">
-
-<p>Accent marks are located in the top row.</p>
-
-<p>The combining ogonek/hook is located in the second row (in place of <strong>f</strong>). The combining low line is located in the third row (in place of <strong>x</strong>).</p>
-
-<p>Combined characters using the ogonek/hook and low line are also available in a long press menu. Keys with long-press options are:</p>
-<ul>
-  <li>a > ą (Ą)</li>
-  <li>d > d̲z̲ (D̲z̲ D̲Z̲)</li>
-  <li>e > ę (Ę)</li>
-  <li>o > ǫ (Ǫ)</li>
-  <li>s > s̲ (S̲)</li>
-  <li>t > t̲s̲ (T̲s̲ T̲S̲)</li>
-  <li>z > z̲ (Z̲)</li>
-</ul>
 
 <p>© 2015-2024 FirstVoices, First Peoples' Cultural Foundation, SIL International</p>
 
