--- a/release/h/hainam/source/readme.htm
+++ b/release/h/hainam/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Hainam</h1>
 
 <p>
-    hainam 1.0 generated from template.
+    hainam for hainam language, south-hokkienese, Bǽh-oe-tu.
 </p>
 
 <p>© cathaylab 2024-2024</p>
