Corrected typo, bumped version number

--- a/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
+++ b/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
@@ -17,7 +17,7 @@
       </ul>
     <li><b>Right Bracket ]</b> plus a vowel becomes a vowel with falling tone</li>
       <ul>
-        <li><b>[o</b> becomes <b>ô</b></li>
+        <li><b>]o</b> becomes <b>ô</b></li>
       </ul>
     <li><b>Comma ,</b> plus a vowel becomes a vowel with nasal hook</li>
       <ul>
