--- a/release/fv/fv_dene_dzage/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_dzage/source/welcome/welcome.htm
@@ -45,7 +45,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     </li>
     <li><b>Right Bracket ]</b> plus a vowel becomes a vowel with falling tone
       <ul>
-        <li><b>[o</b> becomes <b>ô</b></li>
+        <li><b>]o</b> becomes <b>ô</b></li>
       </ul>
     </li>
     <li><b>Comma ,</b> plus a vowel becomes a vowel with nasal hook
