--- a/release/fv/fv_haisla/source/welcome.htm
+++ b/release/fv/fv_haisla/source/welcome.htm
@@ -17,7 +17,8 @@
     The Haisla keyboard has been developed by FirstVoices and updated to suit their orthographic changes.
 </p>
 <p>
-    More information about the Haisla archive on FirstVoices can be found here: https://www.firstvoices.com/explore/FV/sections/Data/Haisla/Haisla/Haisla
+    More information about the Haisla archive on FirstVoices can be found here: 
+    <h3><a href="https://www.firstvoices.com/explore/FV/sections/Data/Haisla/Haisla/Haisla">Haisla</a></h3>
 </p>
 <p>
 </p>
@@ -27,6 +28,10 @@
 <!-- Insert Keyboard Layout Images or HTML here -->
 <p>
 The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="fv_haisla_keycombos.pdf">this document</a> to download a PDF with all of the special key combinations.</p>
+
+<h2>Unicode Fonts</h2>
+						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
 
 <p>© FirstVoices 2020-2024</p>
 
