--- a/release/fv/fv_dakelh/source/welcome/welcome.htm
+++ b/release/fv/fv_dakelh/source/welcome/welcome.htm
@@ -38,7 +38,7 @@ kbd {
             </li>
 						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
 						<ul>
-									<li>single: ‘ <kbd>SHIFT</kbd>+<kbd>`</kbd> — ’ Apostrophe</li>
+									<li>single: ‘ <kbd>SHIFT</kbd>+<kbd>`</kbd> — ’ <kbd>'</kbd></li>
 									<li>double: “ <kbd>SHIFT</kbd>+<kbd>-</kbd> — ” <kbd>SHIFT</kbd>+<kbd>=</kbd></li>
 									<li>single ‹ <kbd>Right-Alt</kbd>+<kbd>SHIFT</kbd>+<kbd>9</kbd> — › <kbd>Right-Alt</kbd>+<kbd>SHIFT</kbd>+<kbd>0</kbd></li>
 									<li>double « <kbd>Right-Alt</kbd>+<kbd>9</kbd> — » <kbd>Right-Alt</kbd>+<kbd>0</kbd></li>
