--- a/release/fv/fv_dene_zhatie/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_zhatie/source/welcome/welcome.htm
@@ -32,7 +32,7 @@ kbd {
     <ul>
       <li> The special characters of Dene Zhatıé have been assigned to a mix of both number and punctuation keys. </li>
         <ul>
-          <li> All accents are typed after the base character — ų is typed <kbd>u</kbd> then Left Bracket <kbd>/</kbd>
+          <li> All accents are typed after the base character — ų is typed <kbd>u</kbd> then Left Bracket <kbd>[</kbd>
             <ul>
               <li> To type the acute accent use the Backquote key ` — á is typed <kbd>a</kbd> then <kbd>`</kbd></li>
               <li> To type the ogonek accent use the the Left Bracket key [ — ų is typed <kbd>u</kbd> then <kbd>[</kbd></li>
