cantonese telex second submission

--- a/release/c/cantonese_telex/source/readme.htm
+++ b/release/c/cantonese_telex/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cantonese_telex</title>
+  <title>cantonese telex</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -15,7 +15,7 @@
 <h1>Cantonese Telex</h1>
 
 <p>
-    cantonese_telex 1.0 generated from template.
+    cantonese telex 1.0 generated from template.
 </p>
 
 <p>© cathaylab 2024-2024</p>
