--- a/release/c/cantonese_telex/source/welcome.htm
+++ b/release/c/cantonese_telex/source/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Start Using nguphing</title>
+  <title>Start Using cantonese telex</title>
   <style type="text/css">
     p { font: 16pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
