--- a/release/c/cantonese_telex/source/readme.htm
+++ b/release/c/cantonese_telex/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Cantonese Telex</h1>
 
 <p>
-    cantonese telex 1.0 generated from template.
+    cantonese telex for Yụt Yũ (Cantonese). Cantonese Telex粵語電報式羅馬字輸入法
 </p>
 
 <p>© cathaylab 2024-2024</p>
