--- a/release/c/cantonese_telex/source/readme.htm
+++ b/release/c/cantonese_telex/source/readme.htm
@@ -18,9 +18,9 @@
     cantonese telex for Yụt Yũ (Cantonese). Cantonese Telex粵語電報式羅馬字輸入法
 </p>
 
-<p>© cathaylab 2024-2024</p>
-
 <p> e-mail: goetiansoc@proton.me</p>
 
+<p> telegram: https://t.me/cathaylab</p>
+<p>© cathaylab</p>
 </body>
 </html>
