--- a/release/fv/fv_kashogotine_yati/source/welcome/welcome.htm
+++ b/release/fv/fv_kashogotine_yati/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -25,24 +30,42 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2><img src="fv_kashogotine_yati_U_.png" alt="" height="198" width="514" border="0" /></h2>
 					<h2>Keyboard Layout </h2>
 					<ul>
-						<li>The special characters of K'áshogot'ı̨nę́ Yatı̨́ have been assigned to various keys</li>
-						<li>All accents are typed after the base character: <strong>á</strong> is typed <strong>a</strong> then <strong>Left-Bracket [</strong></li>
-            <li> To type the acute accent use the <strong>Left-Bracket [</strong><br/>
-                <strong>í</strong> is typed <strong>ı</strong> then <strong>[</strong></li>
-						<li>To type the nasal accent use the <strong>Right-Bracket ]</strong><br/>
-							  <strong>ǫ</strong> is typed <strong>o</strong> then <strong>]</strong></li>
-            <li> To type the acute and nasal accents simultaneously use the <strong> backslash key \</strong><br/>
-                <strong>ǫ́</strong> is typed <strong>o</strong> then <strong>\</strong></li>
-            <ul>
-              <li>The combined acute and nasal accents can also be typed by typing the accents individually in either order</li>
-            </ul>
-            <li>The schwa <strong>ə</strong> is typed by pressing the 3 key</li>
-            <li>The barred l <strong>ł</strong> can be typed using the semi-colon key ;</li>
-            <li>The dotless i <strong>ı</strong> is typed using the <strong>i key</strong></li>
-            <li>The glottal stop <strong>ɂ</strong> is typed using the <strong>slash key /</strong></li>
-						<li>All changed keys can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-						<ul></li>
-    </ul>
+						<li>The special characters of K'áshogot'ı̨nę́ Yatı̨́ have been assigned to various keys
+              <ul>
+                <li>The schwa ə is typed by pressing the 3 key <kbd>3</kbd></li>
+                <li>The barred l ł is typed using the semicolon key <kbd>;</kbd></li>
+                <li>The dotless i ı is typed using the i key <kbd>i</kbd></li>
+                <li>The glottal stop ɂ is typed using the Slash key <kbd>/</kbd></li>
+                <li>The capital glottal stop Ɂ is typed <kbd>Shift</kbd>+<kbd>/</kbd></li>
+              </ul>
+            </li>
+						<li>All accents are typed after the base character: á is typed <kbd>a</kbd> then Left-Bracket <kbd>[</kbd>
+              <ul>
+                <li> To type the acute accent use the Left-Bracket key <kbd>[</kbd><br/>
+                      í is typed <kbd>i</kbd> then <kbd>[</kbd></li>
+						    <li> To type the nasal accent use the Right-Bracket key <kbd>]</kbd><br/>
+							        ǫ is typed <kbd>o</kbd> then <kbd>]</kbd></li>
+                <li> To type the acute and nasal accents simultaneously use the Backslash key <kbd>\</kbd></strong><br/>
+                      ǫ́ is typed <kbd>\</kbd> then <kbd>\</kbd>
+                  <ul>
+                    <li>The combined acute and nasal accents can also be typed by typing the accents individually in either order</li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>All changed keys can type their original value by holding down the Right-Alt or Option key. To get the original value of the Left-bracket [ type <kbd>Right-Alt</kbd>+<kbd>[</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>[</kbd> (Mac).
+              <ul>
+                <li>NOTE: When using Google Docs, the Slash is typed <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>'</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>Shift</kbd>+<kbd>'</kbd> (Mac)</li>
+              </ul>
+            </li>
+          </ul>
+          
+
+						
+          <h2>Unicode Fonts</h2>
+				  <p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+          <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+      <hr>
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
   </tr>
