--- a/release/fv/fv_kwadacha_tsekene/source/welcome/welcome.htm
+++ b/release/fv/fv_kwadacha_tsekene/source/welcome/welcome.htm
@@ -27,23 +27,36 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 					<ul>
 						<ul>
 						<li>The special Characters of Kwadacha Tsek’ene have been assigned to various punctuation keys</li>
-						<li>All accents are typed after the base character: <strong>à</strong> is typed <strong>a</strong> then <strong>backquote `</strong></li>
-            <li> To type the low tone accent when it appears over a single letter use the  <strong> slash key / </strong><br/>
-                <strong>à</strong> is typed <strong>a</strong> then <strong> / </strong></li>
-            <li> To type the high tone accent when it appears over a single letter use the <strong> backquote key `</strong><br/>
-                <strong>í</strong> is typed <strong>i</strong> then <strong>`</strong></li>
-						<li>To type the nasal accent when it appears under a single letter use the <strong>left bracket key [</strong><br/>
-							  <strong>ǫ</strong> is typed <strong>o</strong> then <strong>[</strong></li>
-						<li>To type	the combined low tone and nasal accents over a single letter use the <strong> right bracket key ]</strong><br/>
-                <strong>ǫ̀</strong> is typed <strong>o</strong> then <strong>]</strong></li>
-            <li> To type the combined high tone and nasal accents over a single letter use the <strong> backslash key \</strong><br/>
-                <strong>ǫ́</strong> is typed <strong>o</strong> then <strong>\</strong></li>
-            <li>The combined low tone or high tone and nasal accents can also be typed by typing the accents individually in either order</li>
-            <li> To type any of the accents over double vowels, type the double vowels followed by the key for desired accents <br/>
-                <strong>ǫ́ǫ́</strong> is typed <strong>oo</strong> then <strong>\</strong></li>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-						<ul></li>
-    </ul>
+						<li>All accents are typed after the base character: <strong>à</strong> is typed <strong>a</strong> then <strong>backquote `</strong>
+              <ul>
+                  <li> To type the low tone accent when it appears over a single letter use the  <strong> slash key / </strong><br/>
+                    <strong>à</strong> is typed <strong>a</strong> then <strong> / </strong></li>
+                  <li> To type the high tone accent when it appears over a single letter use the <strong> backquote key `</strong><br/>
+                    <strong>í</strong> is typed <strong>i</strong> then <strong>`</strong></li>
+						      <li>To type the nasal accent when it appears under a single letter use the <strong>left bracket key [</strong><br/>
+							      <strong>ǫ</strong> is typed <strong>o</strong> then <strong>[</strong></li>
+						      <li>To type	the combined low tone and nasal accents over a single letter use the <strong> right bracket key ]</strong><br/>
+                    <strong>ǫ̀</strong> is typed <strong>o</strong> then <strong>]</strong></li>
+                  <li> To type the combined high tone and nasal accents over a single letter use the <strong> backslash key \</strong><br/>
+                    <strong>ǫ́</strong> is typed <strong>o</strong> then <strong>\</strong>
+                    <ul>
+                      <li>The combined low tone or high tone and nasal accents can also be typed by typing the accents individually in either order</li>
+                    </ul>
+                  </li>
+                  <li> To type any of the accents over double vowels, type the double vowels followed by the key for desired accents <br/>
+                    <strong>ǫ́ǫ́</strong> is typed <strong>oo</strong> then <strong>\</strong></li>
+              </ul>
+						  <li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type <strong>Right-Alt</strong>+<strong>[</strong> (Windows) / <strong>Option</strong>+<strong>[</strong> (Mac).</li>
+                <ul>
+                  <li>NOTE: When using Google Docs, Slash / is typed <strong>Right-Alt</strong>+<strong>Shift</strong>+<strong>/</strong> (Windows) / <strong>Option</strong>+<strong>Shift</strong>+<strong>/</strong> (Mac) </li>
+                </ul>
+						  </li>
+          </ul>
+
+<h2>Unicode Fonts</h2>
+<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+<h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+      <hr>
   <tr>
     <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
   </tr>
