--- a/release/fv/fv_kwakwala/source/welcome/welcome.htm
+++ b/release/fv/fv_kwakwala/source/welcome/welcome.htm
@@ -26,23 +26,30 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 					<h2>Keyboard Layout </h2>
 					<ul>
 						<li>The special Characters of Kwak̕wala have been assigned to various punctuation keys</li>
-						<li>All accents are typed after the base character: <strong>a̱</strong> is typed <strong>a</strong> then <strong>semicolon ;</strong></li>
-						<li>To type the glottalized accent when it appears over a single letter use the <strong>slash key /</strong><br />
-								<strong>k̓</strong> is typed <strong>k</strong> then <strong>/</strong></li>
-						<li>To type the glottalized accent when it appears between two letters use the <strong>right bracket key ]</strong><br /> <strong>k̕w</strong> is typed <strong>k</strong> then <strong>]</strong> then <strong>w</strong></li>
-						<li>To type the underline accent use the <strong>semicolon key ;</strong><br /> <strong>ḵ</strong> is typed <strong>k</strong> then <strong>;</strong></li>
-						<li>To type the slash-ł use the <strong>left bracket key [</strong></li>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
+						<li>All accents are typed after the base character: <strong>a̱</strong> is typed <strong>a</strong> then <strong>semicolon ;</strong>
               <ul>
-                  <li><b>NOTE</b>: To type / while using Google Drive, use <strong>shift</strong>, <strong>Right-Alt</strong>, then <strong>Slash /</strong></li>
+						    <li>To type the glottalized accent when it appears over a single letter use the <strong>slash key /</strong><br />
+								  <strong>k̓</strong> is typed <strong>k</strong> then <strong>/</strong></li>
+						    <li>To type the glottalized accent when it appears between two letters use the <strong>right bracket key ]</strong><br /> <strong>k̕w</strong> is typed <strong>k</strong> then <strong>]</strong> then <strong>w</strong></li>
+						    <li>To type the underline accent use the <strong>semicolon key ;</strong><br /> <strong>ḵ</strong> is typed <strong>k</strong> then <strong>;</strong></li>
               </ul>
-						<ul><li>
-      Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys. </li>
-        <li>single: ‘ Backquote — ’ Shift+Right Bracket</li><li>double: “ Shift+Hyphen — ” Shift+Equals</li><li>
-      single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0 </li><li>
-    double « Right-Alt+9 — » Right-Alt+0</li>
-      </ul>
-    </ul>
+            </li>
+						<li>To type the slash - ł use the <strong>left bracket key [</strong></li>
+						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type <strong>Right-Alt</strong>+<strong>[</strong> (Windows) <strong>Option</strong>+<strong>[</strong> (Mac).</li>
+              <ul>
+                  <li><b>NOTE</b>: To type / while using Google Drive, use <strong>Right-Alt</strong>+<strong>Shift</strong>+<strong>/</strong> (Windows) / <strong>Option</strong>+<strong>Shift</strong>+<strong>/</strong> (Mac) </li>
+              </ul>
+            </li>
+            <li> Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
+              <ul>
+                <li>single: ‘ Backquote — ’ Shift+Right Bracket</li>
+                <li>double: “ Shift+Hyphen — ” Shift+Equals</li>
+                <li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0 </li>
+                <li> double « Right-Alt+9 — » Right-Alt+0</li>
+              </ul>
+            </li>
+          </ul>
+    
 						<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
