fv_skwxwumesh - added rules, fixed help docs
added rules to prevent diacritic stacking; added help docs and additional images to kb package

--- a/release/fv/fv_skwxwumesh_snichim/source/fv_skwxwumesh_snichim_kmw_help.htm
+++ b/release/fv/fv_skwxwumesh_snichim/source/fv_skwxwumesh_snichim_kmw_help.htm
@@ -24,7 +24,7 @@ This keyboard is designed for the <b>Sḵwx̱wú7mesh sníchim</b> language of
 
 <h2>Desktop Keyboard Layout</h2>
 
-<img src="welcome/skwxwumesh_U_.png">
+<img src="help/skwxwumesh_U_.png">
 		<ul>
 			<li>All accents are typed after the base character: w̓ is typed w then Backquote `
 				<ul>
