--- a/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
+++ b/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
@@ -47,7 +47,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
   </tr>
   <tr>
-    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
+    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Language and Culture Council. This keyboard is provided free of charge. </p></td>
   </tr>
 </table>
 
