Updated link in welcome and help, bumped version

--- a/release/fv/fv_haisla/source/welcome.htm
+++ b/release/fv/fv_haisla/source/welcome.htm
@@ -18,7 +18,7 @@
 </p>
 <p>
     More information about the Haisla archive on FirstVoices can be found here: 
-    <h3><a href="https://www.firstvoices.com/explore/FV/sections/Data/Haisla/Haisla/Haisla">Haisla</a></h3>
+    <h3><a href="https://www.firstvoices.com/haisla/">Haisla</a></h3>
 </p>
 <p>
 </p>
