--- a/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
+++ b/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
@@ -24,20 +24,20 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="skwxwumesh_U_.png" alt="" height="198" width="514" border="0" /></h2>
 		<ul>
-			<li>All accents are typed after the base character: w̓ is typed w then Backquote `
+			<li>All accents are typed after the base character — w̓ is typed <kbd>w</kbd> then Backquote <kbd>`</kbd>
 				<ul>
-						<li>To type the acute accent use the Semicolon key ; — á is typed a then Semicolon ;</li>
-						<li>To type the combining glottalized accent use the Backquote key ` (next to the 1 key) — m̓ is typed m then Backquote `<br />
-								The weak glottal is typed by using the Apostrophe key '</li>
-						<li>To type the underline accent (below macron) use the Hyphen key — ḵ is typed k then Hyphen -
-								The letters ḵ, x̱ also have their own keys: left bracket [, right bracket ]</li>
+						<li>To type the acute accent use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd></li>
+						<li>To type the combining glottalized accent use the Backquote key <kbd>`</kbd> (next to the 1 key) — m̓ is typed <kbd>m</kbd> then Backquote <kbd>`</kbd><br />
+								The weak glottal is typed by using the Apostrophe key <kbd>'</kbd></li>
+						<li>To type the underline accent (below macron) use the Hyphen key — ḵ is typed <kbd>k</kbd> then Hyphen <kbd>-</kbd> <br />
+								The letters ḵ, x̱ also have their own keys: left bracket <kbd>[</kbd>, right bracket <kbd>]</kbd></li>
 					</ul>
 			</li>
-			<li>The letter ḵ can be typed with the Left Bracket [ key.</li>
-			<li>The letter x̱ can be typed with the Right Bracket ] key.</li>
-			<li>The weak glottal ’ is typed with the Apostrophe key '.</li>
-			<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. <br />
-					The Semicolon ; is typed RightAlt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+			<li>The letter ḵ can be typed with the Left Bracket <kbd>[</kbd> key.</li>
+			<li>The letter x̱ can be typed with the Right Bracket <kbd>]</kbd> key.</li>
+			<li>The weak glottal ’ is typed with the Apostrophe key <kbd>'<<kbd>kbd>.</li>
+			<li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> key (Windows) or <kbd>Option</kbd> key (Mac). <br />
+					The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac).</li>
 		</ul>
     
 	<hr></td>
@@ -47,7 +47,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
   </tr>
   <tr>
-    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Language and Culture Council. This keyboard is provided free of charge. </p></td>
+    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Language and Cultural Council. This keyboard is provided free of charge. </p></td>
   </tr>
 </table>
 
