skwxwu7mesh - help doc

--- a/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
+++ b/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
@@ -13,6 +13,12 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
+
  --> </style>
 
 </head>
@@ -35,9 +41,9 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 			</li>
 			<li>The letter ḵ can be typed with the Left Bracket <kbd>[</kbd> key.</li>
 			<li>The letter x̱ can be typed with the Right Bracket <kbd>]</kbd> key.</li>
-			<li>The weak glottal ’ is typed with the Apostrophe key <kbd>'<<kbd>kbd>.</li>
+			<li>The weak glottal ’ is typed with the Apostrophe key <kbd>'</kbd>.</li>
 			<li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> key (Windows) or <kbd>Option</kbd> key (Mac). <br />
-					The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac).</li>
+					The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>;</kbd> (Windows) or <kbd>Option</kbd>+<kbd>;</kbd> (Mac).</li>
 		</ul>
     
 	<hr></td>
