--- a/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
+++ b/release/fv/fv_skwxwumesh_snichim/source/welcome/welcome.htm
@@ -30,19 +30,19 @@ kbd {
      
     <h2><img src="skwxwumesh_U_.png" alt="" height="198" width="514" border="0" /></h2>
 		<ul>
-			<li>All accents are typed after the base character — w̓ is typed <kbd>w</kbd> then Backquote <kbd>`</kbd>
+			<li>All combining accents are typed after the base character — w̓ is typed <kbd>w</kbd> then Backquote <kbd>`</kbd>
 				<ul>
 						<li>To type the <b>acute accent</b> use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd></li>
 						<li>To type the <b>combining glottalized accent</b> use the Backquote key <kbd>`</kbd> (next to the 1 key) — m̓ is typed <kbd>m</kbd> then Backquote <kbd>`</kbd>
 							<ul>
-								<li>The weak glottal is typed by using the Apostrophe key <kbd>'</kbd></li>
+								<li>The standalone weak glottal is typed with the Apostrophe key <kbd>'</kbd></li>
 							</ul>
 						</li>
 						<li>To type the <b>underline accent</b> (below macron) use the Hyphen key <kbd>-</kbd> — ḵ is typed <kbd>k</kbd> then Hyphen <kbd>-</kbd></li>
 				</ul>
 			</li>
-			<li>The letter <b>ḵ</b> can also be typed with the Left Bracket key <kbd>[</kbd></li>
-			<li>The letter <b>x̱</b> can also be typed with the Right Bracket key <kbd>]</kbd></li>
+			<li>The letter <b>ḵ</b> is typed with the Left Bracket key <kbd>[</kbd></li>
+			<li>The letter <b>x̱</b> is typed with the Right Bracket key <kbd>]</kbd></li>
 			<li>The <b>weak glottal ’</b> is typed with the Apostrophe key <kbd>'</kbd></li>
 			<li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> key (Windows) or <kbd>Option</kbd> key (Mac). <br />
 					The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>;</kbd> (Windows) or <kbd>Option</kbd>+<kbd>;</kbd> (Mac).</li>
