--- a/experimental/r/runeboard/source/readme.htm
+++ b/experimental/r/runeboard/source/readme.htm
@@ -34,6 +34,10 @@
 
 <p>The current font included with this Runeboard release is <b><a href=https://catrinity-font.de/downloads/Catrinity.otf>Catrinity</a></b>. It is a sans-serif font.</p>
 
+<p>Stylish runic fonts are freely available at:</p>
+<ul>
+<li type=disc><a href=https://runerevival.online/fonts>runerevival.online/fonts</a>
+</ul>
 <p>Freely available, serif runic fonts include:</p>
 <ul>
 <li type=disc><a href=http://www.quivira-font.com/files/Quivira.otf>Quivira.otf</a>
