--- a/experimental/r/runeboard/source/welcome/welcome.htm
+++ b/experimental/r/runeboard/source/welcome/welcome.htm
@@ -25,7 +25,7 @@
 <h3>Desktop</h3>
 
   <p>The K_Z key is the Zero Width Joiner [ZWJ]. In fonts which support bindrunes/ligatures, type it after another character and before another to create a supported bindrune.</p>
-  <p>The space key outputs U+16EB RUNIC SINGLE PUNCTUATION. A regular space can be accessed throught the SHIFT+SPACE key. </p>
+  <p>The space key outputs U+16EB RUNIC SINGLE PUNCTUATION. A regular space can be accessed through the BACKSLASH key. </p>
 
 	<h4>Default (unshifted)</h4>
 	<p><a href="layerU_.png"><img class="keyboard" src="layerU_.png" alt="Default (unshifted) state" /></a></p>
@@ -38,7 +38,7 @@
 
 <h3>Tablet Layout</h3>
 <p>Due to the size and number of keys, some characters are hidden in the long press. Press and hold on the key with a little dot on the top right to reveal and use them.</p>
-<p>The number layer of the tablet layout includes the 3 runic calendar runes along with currency symbols, both Roman and Hindu-Arabic numerals, and a small selection of other useful characters. </p>
+<p>The number layer of the tablet layout includes the 3 runic calendar runes along with currency symbols, both Roman and Hindu-Arabic numerals, and a selection of other useful characters. </p>
 
 </body>
 </html>
