--- a/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
+++ b/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -24,13 +29,14 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="fv_nlakapamuxcheen_U_.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
-						<li>The lowline has been assigned to the <b>underscore key _</b> (shift+hyphen key). To type the regular underscore, hold down the Right-Alt or Option key then press shift + hyphen key.</li>
-						<li>To type <b>g̲</b>, type <b>g + _ </b></li>
-						<li>For any double or triple letters that have the lowline, type all the letters followed by the underscore _.</li>
+						<li>The lowline has been assigned to the underscore key _ <kbd>Shift</kbd>+<kbd>-</kbd>. To type the regular underscore, hold down the <kbd>Right-Alt</kbd> (Windows) or <kbd>⌥ Option</kbd> (Mac) key then <kbd>Shift</kbd>+<kbd>-</kbd>.</li>
+						<li>To type <b>g̲</b>, type <kbd>g</kbd> then <kbd>Shift</kbd>+<kbd>-</kbd></li>
+						<li>For any double or triple letters that have the lowline, type all the letters followed by the underscore _.
               <ul>
-                <li>To type <b>h̲h̲</b>, type <b>hh + _</b></li>
-                <li>To type <b>w̲u̲h̲</b>, type <b>wuh + _</b></li>
+                <li>To type <b>h̲h̲</b>, type <kbd>h</kbd><kbd>h</kbd> then <kbd>Shift</kbd>+<kbd>-</kbd></li>
+                <li>To type <b>w̲u̲h̲</b>, type <kbd>w</kbd><kbd>u</kbd><kbd>h</kbd> then <kbd>Shift</kbd>+<kbd>-</kbd></li>
               </ul>
+            </li>
             </ul>
 							 
 						<h2>Unicode Fonts</h2>
