--- a/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
+++ b/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -24,15 +29,16 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 					<h2><img src="fv_nlha7kapmxtsin_U_.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
 						<li>The special characters of Nlha7kapmxtsin have been assigned to punctuation keys.</li>
-						<li>All accents are typed after the base character: á is typed a then Slash /</li>
+						<li>All accents are typed after the base character — á is typed <kbd>a</kbd> then Slash <kbd>/</kbd>
 							<ul>
-								<li>To type the acute accent use the Slash Key — é is typed e then Slash / </li>
-								<li>To type the apostrophe accent use the Left Bracket Key [ — z̓ is typed z then Left Bracket [ </li>
-								<li>To type the low line accent use the Right Bracket Key ] — g̱ is typed g then Right Bracket ]</li>
+								<li>To type the acute accent use the Slash Key <kbd>/</kbd> — é is typed <kbd>e</kbd> then <kbd>/</kbd></li>
+								<li>To type the apostrophe accent use the Left Bracket Key <kbd>[</kbd> — z̓ is typed <kbd>z</kbd> then <kbd>[</kbd></li>
+								<li>To type the low line accent use the Right Bracket Key <kbd>]</kbd> — g̱ is typed <kbd>g</kbd> then <kbd>]</kbd></li>
 							</ul>
-						<li>The original values of the punctuation keys can be typed by holding down the Right-Alt or Option key. The Slash / is typed Right-Alt+Slash (Windows) Option+Slash (Mac).</li>
+            </li>
+						<li>The original values of the punctuation keys can be typed by holding down the Right-Alt or Option key. The Slash / is typed <kbd>Right-Alt</kbd>+<kbd>/</kbd>(Windows) / <kbd>⌥ Option</kbd>+<kbd>/</kbd> (Mac).</li>
               <ul>
-                  <li><b>NOTE</b>: To type / while using Google Drive, use <strong>shift</strong>, <strong>Right-Alt</strong>, then <strong>Slash /</strong></li>
+                  <li>NOTE: To type / while using Google Drive, use <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Windows) or <kbd>⌥ Option</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Mac)</li>
               </ul>
 					</ul>
           <h2>Unicode Fonts</h2>
