--- a/release/fv/fv_nuucaanul/source/welcome/welcome.htm
+++ b/release/fv/fv_nuucaanul/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -26,22 +31,27 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 					 
 <ul>
 								<li>The special characters of nuučaan̓uł have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
-								<li>All accents are typed after the base character: t̓ is typed t then Apostrophe '</li>
-								<li>To type the glottalized accent use the Apostrophe key ' — k̓ is typed k then Apostrophe '</li>
-								<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Left-Bracket [ is typed Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-								<li>There are several additional characters which can be typed holding down the Right-Alt or Option key.</li>
-								<ul>
-									<li>The schwa-ə is typed Right-Alt+e (Windows) Option+e (Mac).</li>
-									<li>The tilde-ɫ is typed Right-Alt+l (Windows) Option+l (Mac).</li>
-								    <li>The eng-ŋ is typed Right-Alt+n (Windows) Option+n (Mac).</li>
-								</ul>
-								<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
-								<ul>
-									<li>single: ‘ Left-Bracket — ’ Right-Bracket</li>
-									<li>double: “ Shift+Left-Bracket — ” Shift+Right-Bracket</li>
-									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
-									<li>double « Right-Alt+9 — » Right-Alt+0</li>
-								</ul>
+								<li>All accents are typed after the base character — t̓ is typed <kbd>t</kbd> then Apostrophe <kbd>'</kbd>
+									<ul>
+										<li>To type the glottalized accent use the Apostrophe key <kbd>'</kbd> — k̓ is typed <kbd>k</kbd> then <kbd>'</kbd></li>
+									</ul>
+								</li>
+								<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key — the Left-Bracket [ is typed <kbd>Right-Alt</kbd>+<kbd>[</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>[</kbd> (Mac).</li>
+								<li>There are several additional characters which can be typed holding down the Right-Alt or Option key.
+									<ul>
+										<li>The schwa-ə is typed <kbd>Right-Alt</kbd>+<kbd>e</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>e</kbd> (Mac).</li>
+										<li>The tilde-ɫ is typed <kbd>Right-Alt</kbd>+<kbd>l</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>l</kbd> (Mac).</li>
+								    	<li>The eng-ŋ is typed <kbd>Right-Alt</kbd>+<kbd>n</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>n</kbd> (Mac).</li>
+									</ul>
+								</li>
+								<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
+									<ul>
+										<li>single: ‘ <kbd>[</kbd> — ’ <kbd>]</kbd></li>
+										<li>double: “ <kbd>Shift</kbd>+<kbd>[</kbd> — ” <kbd>Shift</kbd>+<kbd>]</kbd></li>
+										<li>single ‹ <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>9</kbd> — › <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>0</kbd></li>
+										<li>double « <kbd>Right-Alt</kbd>+<kbd>9</kbd></kbd> — » <kbd>Right-Alt</kbd>+<kbd>0</kbd></li>
+									</ul>
+								</li>
 							 </ul>
 						<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
