--- a/release/fv/fv_nuucaanul/source/readme.htm
+++ b/release/fv/fv_nuucaanul/source/readme.htm
@@ -8,7 +8,7 @@
 
 <h1>nuučaan̓uł  Keyboard</h1>
 
-<p>This keyboard is designed for the Nuučaan̓uł language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the nuučaan̓uł language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
 </body>
 </html>
