--- a/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -28,27 +33,31 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 	<li>The on-screen keyboard shows each syllable in their final form and in their e-orientation, or in their short and long form (vowels).</li>
 	<li>The syllabics used to write ᐊᓂᔑᓂᓂᒧᐎᐣ (Ojibwa) are typed primarily by writing their long-vowel equivalents, with a few exceptions. See <a href=Severn_Ojibwa.pdf>this document</a> for a full list of how to type each syllable with this keyboard, and all of the special key combinations.</li>
 		<ul>
-			<li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear on screen. Following the consonant with a vowel will change the syllable final into its full form in the orientation corresponding with the vowel typed.</li>
+			<li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear on screen. Following the consonant with a vowel will change the syllable final into its full form in the orientation corresponding with the vowel typed.
 				<ul>
-					<li>Typing the k or g key outputs <b>ᐠ</b>. If the a key is typed after, it will change to <b>ᑲ</b>.</li>
+					<li>Typing the <kbd>k</kbd> or <kbd>g</kbd> key outputs <b>ᐠ</b>. If the <kbd>a</kbd> key is typed after, it will change to <b>ᑲ</b>.</li>
 				</ul>
-			<li>To type a long vowel / add the top dot, type the vowel twice.</li>
+			</li>
+			<li>To type a long vowel / add the top dot, type the vowel twice.
 				<ul>
 					<li><b>ᑳ</b> is typed <b>kaa</b> or <b>gaa</b></li>
 				</ul>
-			<li>To add the w-dot, type the w after the first consonant.</li>
+			</li>
+			<li>To add the w-dot, type the w after the first consonant.
 				<ul>
 					<li><b>ᐃᐠᐧᐁ</b> is typed <b>ik[we</b> or <b>ig[we</b></li>
 				</ul>
-			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by SHIFT + the first letter of each sound (s, z, and t).</li>
+			</li>
+			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by <kbd>Shift</kbd> + the first letter of each sound (s, z, and t).
 				<ul>
 					<li><b>ᐊᓂᔑᓂᓂᒧᐎᐣ</b> is typed <b>aniSininimowin</b> or <b>aniZininimowin</b></li>
 					<li><b>ᒌᒫᐣ</b> (pointed) is typed <b>Ciimaan</b> or <b>jiimaan</b></li>
 					<li><b>ᒋᒪᐣ</b> (unpointed) is typed <b>Ciman</b> or <b>jiman</b></li>
 				</ul>
+			</li>
 		</ul>
 	</li>
-	<li>In the case of a vowel immediately after a syllable final or two vowels that need to be side by side, use the <b>left bracket key [ </b> to keep the syllables separate. </li>
+	<li>In the case of a vowel immediately after a syllable final or two vowels that need to be side by side, use the <b>left bracket key</b> <kbd>[</kbd> to keep the syllables separate.
 		<ul>
 			<li><b>ᐋ</b> is typed <b>aa</b></li>
 			<li><b>ᐊᐊ</b> is typed <b>a[a</b></li>
@@ -56,26 +65,29 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 			<li><b>ᐃᐠᐌ</b> (pointed) is typed <b>ik[we</b> or <b>ig[we</b></li>
 		</ul>
 	</li>
+</ul>
 	<p></p>
 
 <h2>Punctuation</h2>
 	<ul>
-		<li>A standalone above dot indicating vowel length can be typed with the Backquote key `</li>
-		<li>A standalone w-dot can be typed with the q key.</li>
+		<li>A standalone above dot indicating vowel length can be typed with the Backquote key <kbd>`</kbd></li>
+		<li>A standalone w-dot can be typed with the q key <kbd>q</kbd>
 			<ul>
 				<li><b>NOTE:</b> the dot indicating a long vowel and the w-dot do not need to be typed for the majority of syllables on the keyboard. They are provided as an option for syllables that do not have a single character that contains the syllable and one or both dots, ie; ᐧᕙ.</li>
 			</ul>
-		<li><b>᙮</b> is typed with the period key .</li>
-		<li>single guillement: ‹ Right-Alt+Semicolon key ; — › Right-Alt+Quote '</li>
-		<li>double guillemets: « Shift+Right-Alt+Semicolon key ; — » Shift+Right-Alt+Quote '</li>
-		<li>Any modified punctuation can be typed using <b>Right-Alt</b>(Windows) or <b>Option</b>(Mac) + the original key.</li>
+		</li>
+		<li><b>᙮</b> is typed with the period key <kbd>.</kbd></li>
+		<li>single guillement: ‹ <kbd>Right-Alt</kbd>+<kbd>;</kbd> — › <kbd>Right-Alt</kbd>+<kbd>'</kbd></li>
+		<li>double guillemets: « <kbd>Shift</kbd>+<kbd>Right-Alt</kbd>+<kbd>;</kbd> — » <kbd>Shift</kbd>+<kbd>Right-Alt</kbd>+<kbd>'</kbd></li>
+		<li>Any modified punctuation can be typed using <b>Right-Alt</b> (Windows) or <b>Option</b> (Mac) + the original key.
 			<ul>
-				<li><b>.</b> is typed Right-Alt / Option + Period key . </li>
-				<li><b>-</b> is typed Right-Alt / Option + Hyphen key -</li>
-				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
+				<li><b>.</b> is typed <kbd>Right-Alt</kbd>+<kbd>.</kbd> / <kbd>⌥ Option</kbd>+<kbd>.</kbd></li>
+				<li><b>-</b> is typed <kbd>Right-Alt</kbd>+<kbd>-</kbd> / <kbd>⌥ Option</kbd>+<kbd>-</kbd></li>
+				<li><b>+</b> is typed <kbd>Shift</kbd>+<kbd>Right-Alt</kbd>+<kbd>=</kbd> / <kbd>Shift</kbd>+<kbd>⌥ Option</kbd>+<kbd>=</kbd></li>
 			</ul>
-		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type.</li>
-		<li>All uppercase English letters can be typed by pressing <b>Shift+Right-Alt / Option</b> followed by the letter(s) you wish to type.</li>
+		</li>
+		<li>All English letters can be typed by pressing <kbd>Right-Alt</kbd> (Windows) / <kbd>⌥ Option</kbd> (Mac) followed by the letter(s) you wish to type.</li>
+		<li>All uppercase English letters can be typed by pressing <kbd>Right-Alt</kbd> (Windows) / <kbd>⌥ Option</kbd> (Mac) followed by the letter(s) you wish to type.</li>
 	</ul>
 
 		<h2>Unicode Fonts</h2>
