last minute polishing

--- a/release/fv/fv_ojibwa_ifinal_rdot/source/welcome/welcome.htm
+++ b/release/fv/fv_ojibwa_ifinal_rdot/source/welcome/welcome.htm
@@ -35,7 +35,7 @@ kbd {
 		<ul>
 			<li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear on screen. Following the consonant with a vowel will change the syllable final into its full form in the orientation corresponding with the vowel typed.
 				<ul>
-					<li>Typing the <b>k</b> or <b>g</b> key outputs <b>ᣖ</b>. If the a key is typed after, it will change to <b>ᑲ</b>.</li>
+					<li>Typing the <kbd>k</kbd> or <kbd>g</kbd> key outputs <b>ᣖ</b>. If the <kbd>a</kbd> key is typed after, it will change to <b>ᑲ</b>.</li>
 				</ul>
 			</li>
 			<li>To type a long vowel / add the top dot, type the vowel twice.
