--- a/release/fv/fv_lekwungen/source/welcome/welcome.htm
+++ b/release/fv/fv_lekwungen/source/welcome/welcome.htm
@@ -26,24 +26,25 @@ kbd {
 <table width="100%" border="0" cellpadding="0">
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-     
-    <h2><img src="fv_lekwungen_U_.png" alt="" height="198" width="514" border="0" /></h2>
-					<ul>
-						<li>The above keymap shows the special characters that have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
-						<li>All accents are typed after the base character: t̓ is typed <kbd>t</kbd> then Apostrophe <kbd>'</kbd></li>
-						<ul>
-							<li>To type the glottalized accent use the Apostrophe key <kbd>'</kbd> — k̓ is typed <kbd>k</kbd> then Apostrophe <kbd>'</kbd></li>
-							<li>To type the acute accent use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd></li>
-							<li>To type the grave accent use the Backslash key — à is typed <kbd>a</kbd> then <kbd>\</kbd></li>
-						</ul>
-						<li>All changed punctuation and number keys can type their original value by holding down the <kbd>Right-Alt</kbd> or <kbd>Option</kbd> key.
-							<ul>
-								<li>The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac).</li>
-								<li>The number 1 is typed <kbd>RightAlt</kbd>+<kbd>1</kbd> (Windows) or <kbd>Option</kbd>+<kbd>1</kbd> (Mac).</li>
-							</ul>
-						</li>
-					</ul>
 	
+	<h2>Keyboard Layout</h2>
+	<div id='osk'>
+	</div>
+				<ul>
+					<li>The above keymap shows the special characters that have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
+					<li>All accents are typed after the base character: t̓ is typed <kbd>t</kbd> then Apostrophe <kbd>'</kbd></li>
+					<ul>
+						<li>To type the glottalized accent use the Apostrophe key <kbd>'</kbd> — k̓ is typed <kbd>k</kbd> then Apostrophe <kbd>'</kbd></li>
+						<li>To type the acute accent use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd></li>
+						<li>To type the grave accent use the Backslash key — à is typed <kbd>a</kbd> then <kbd>\</kbd></li>
+					</ul>
+					<li>All changed punctuation and number keys can type their original value by holding down the <kbd>Right-Alt</kbd> or <kbd>Option</kbd> key.
+						<ul>
+							<li>The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac)</li>
+							<li>The number 1 is typed <kbd>RightAlt</kbd>+<kbd>1</kbd> (Windows) or <kbd>Option</kbd>+<kbd>1</kbd> (Mac)</li>
+						</ul>
+					</li>
+				</ul>
     
 	<hr>
 	</td>
