welcome.htm fix

--- a/release/fv/fv_lekwungen/source/welcome/welcome.htm
+++ b/release/fv/fv_lekwungen/source/welcome/welcome.htm
@@ -27,9 +27,9 @@ kbd {
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
 	
-	<h2>Keyboard Layout</h2>
-	<div id='osk'>
-	</div>
+	<h2>Desktop Keyboard Layout</h2>
+	<img src="fv_lekwungen_U_.png" alt="lekwungen desktop keymap" height="198" width="514" border="0" />
+
 				<ul>
 					<li>The above keymap shows the special characters that have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
 					<li>All accents are typed after the base character: t̓ is typed <kbd>t</kbd> then Apostrophe <kbd>'</kbd></li>
