--- a/release/fv/fv_sguuxs/source/welcome/welcome.htm
+++ b/release/fv/fv_sguuxs/source/welcome/welcome.htm
@@ -13,6 +13,11 @@
     a:link {color: #0000ee; text-decoration:none;}
     a:visited {	color: rgb(0,150,0); text-decoration:none;} 
     a:active {	color: rgb(102,117,184); text-decoration:none;}
+    kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
      --> </style>
 </head>
 <body>
@@ -24,16 +29,20 @@
       <h2><img src="fv_sguuxsU_.png" alt="Sguuxs" width="514" height="198" /></h2>
              
   <ul>
-                  <li>The special characters of Sgüüx̱s have been assigned to punctuation keys.</li>
-                  <li>All accents are typed after the base character: a̱ is typed a then Hyphen - </li>
-                  <li>To type the low line use the Hyphen Key — ḵ is typed k then Hyphen - </li>
-                  <li>To type the diaeresis accent use the Left-Bracket Key [ - ü is typed u then Left-Bracket [ </li>
-                    <ul>
-                      <li> üü can be typed uu then Left-Bracket [ </li>
-                    </ul>
-                  <li>To type the underdot use the Backquote Key ` - x̣ is typed x then Backquote `</li>
-                  <li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Left-Bracket [ is typed Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-        <ul></ul>      
+    <li>The special characters of Sgüüx̱s have been assigned to punctuation keys.</li>
+        <li>All accents are typed after the base character — a̱ is typed <kbd>a</kbd> then Hyphen <kbd>-</kbd>
+          <ul>
+            <li>To type the low line use the Hyphen Key <kbd>-</kbd> — ḵ is typed <kbd>k</kbd> then <kbd>-</kbd> </li>
+            <li>To type the diaeresis accent use the Left-Bracket Key <kbd>[</kbd> - ü is typed <kbd>u</kbd> then <kbd>[</kbd>
+              <ul>
+                <li> üü can be typed <kbd>u</kbd>+<kbd>u</kbd> then <kbd>[</kbd></li>
+              </ul>
+            </li>
+            <li>To type the underdot use the Backquote Key <kbd>`</kbd> - x̣ is typed <kbd>x</kbd> then <kbd>`</kbd></li>
+          </ul>
+      <li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> or <kbd>⌥ Option</kbd> key. The Left-Bracket [ is typed <kbd>Right-Alt</kbd>+<kbd>[</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>[</kbd> (Mac).</li>
+
+      <p></p>
       <p>The following Unicode fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
 
       <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>             
