--- a/release/fv/fv_southern_tutchone/source/readme.htm
+++ b/release/fv/fv_southern_tutchone/source/readme.htm
@@ -8,7 +8,7 @@
 
 <h1>Southern Tutchone Keyboard</h1>
 
-<p>This keyboard is designed for the Southern Tutchone language of the Western Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the Southern Tutchone language of the Western Subarctic region of Canada, but may work for other languages in the region. This is part of a set of keyboards from FirstVoices.</p>
 
 </body>
 </html>
